syntax = "proto3";
package metadata;

import "common.proto";

enum FileOperation {
    GET = 0;
    PUT = 1;
    DELETE = 2;
}

service MetadataServer {
    // Client to Metadata Server
    rpc PutMetadata (PutMetadataRequest) returns (PutMetadataResponse);

    rpc RequestFileMetadata (RequestFileMetadataRequest) returns (RequestFileMetadataResponse);
    rpc CommitPut (CommitPutRequest) returns (CommitPutResponse);
    rpc RollbackPut (RollbackPutRequest) returns (RollbackPutResponse);
    rpc DecrementClientOngoingRequest (DecrementRequestRequest) returns (DecrementRequestResponse);

    // Storage Server to Metadata Server
    rpc AddServer (AddServerRequest) returns (AddServerResponse);
}
message PutMetadataRequest {
    common.FileMetadata metadata = 1;
}

message PutMetadataResponse {
    bool success = 1;
}

message RequestFileMetadataRequest {
    FileOperation operation = 1;
    string filename = 2;
}

message RequestFileMetadataResponse {
    common.Status status = 1;
    common.FileMetadata metadata = 2;
}

message CommitPutRequest {
    string filename = 1;
}

message CommitPutResponse {
    common.Status status = 1;
}

message RollbackPutRequest {
    string filename = 1;
}

message RollbackPutResponse {
    common.Status status = 1;
}

message DecrementRequestRequest {}

message DecrementRequestResponse {
    common.Status status = 1;
}

message AddServerRequest {
    string server_address = 1;
    uint32 server_port = 2;
}

message AddServerResponse {
    common.Status status = 1;
}